--- a/UI/MainWindow.xaml
+++ b/UI/MainWindow.xaml
@@ -77,8 +77,7 @@
                 IsEditable="True"
                 IsReadOnly="True"
                 ItemsSource="{Binding IdePathsModels, UpdateSourceTrigger=PropertyChanged}"
-                SelectedValue="{Binding SelectedIdePath, UpdateSourceTrigger=PropertyChanged}"
-                SelectionChanged="comboIDEPaths_SelectionChanged" />
+                SelectedValue="{Binding SelectedIdePath, UpdateSourceTrigger=PropertyChanged}" />
             <Button
                 x:Name="btnDeleteIdePath"
                 Grid.Column="5"
@@ -269,6 +268,7 @@
             Grid.Row="7"
             Margin="0,0,0,5"
             ItemsSource="{Binding ProjectPathModels, UpdateSourceTrigger=PropertyChanged}"
+            KeyDown="lvProjectPaths_KeyDown"
             MouseDoubleClick="ProjectPathsList_MouseDoubleClick"
             SelectionChanged="ProjectPathsList_SelectionChanged">
             <ListView.Resources>
