--- a/UI/MainWindow.xaml
+++ b/UI/MainWindow.xaml
@@ -21,8 +21,8 @@
             <RowDefinition Height="28" />
             <RowDefinition Height="28" />
             <RowDefinition Height="28" />
+            <RowDefinition Height="28" />
             <RowDefinition />
-
         </Grid.RowDefinitions>
 
         <Grid
@@ -240,11 +240,14 @@
                 Text="{Binding SelectedProjectPath.Filename}"
                 TextWrapping="NoWrap" />
         </Grid>
-        <Grid Grid.Row="6">
+
+        <Label Grid.Row="6" Content="{Binding SelectedProjectPath.CurrentGitBranch}" />
+
+        <Grid Grid.Row="7">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="50" />
-                <ColumnDefinition Width="107*" />
-                <ColumnDefinition Width="483*" />
+                <ColumnDefinition Width="107" />
+                <ColumnDefinition />
             </Grid.ColumnDefinitions>
             <Label
                 Grid.Column="0"
@@ -256,7 +259,6 @@
                 x:Name="txtSearch"
                 Grid.Column="1"
                 Grid.ColumnSpan="2"
-                Height="20"
                 VerticalAlignment="Center"
                 KeyUp="txtSearch_KeyUp"
                 Text="{Binding Search, UpdateSourceTrigger=PropertyChanged}"
@@ -265,7 +267,7 @@
         </Grid>
         <ListView
             x:Name="lvProjectPaths"
-            Grid.Row="7"
+            Grid.Row="8"
             Margin="0,0,0,5"
             ItemsSource="{Binding ProjectPathModels, UpdateSourceTrigger=PropertyChanged}"
             KeyDown="lvProjectPaths_KeyDown"
