--- a/UI/MainWindow.xaml
+++ b/UI/MainWindow.xaml
@@ -5,7 +5,7 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="clr-namespace:UI"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    Title="Launche - IDE Launcher by Darren Atienza"
+    Title="Launche - Your IDE Launcher"
     Width="650"
     Height="550"
     MaxWidth="750"
