#51 Add groups implementations and add to group menu

--- a/UI/MainWindow.xaml
+++ b/UI/MainWindow.xaml
@@ -286,6 +286,11 @@
                 </Style>
                 <ContextMenu x:Key="ItemContextMenu">
                     <MenuItem
+                        x:Name="mnuAddToGroup"
+                        Click="mnuMoveUp_Click"
+                        Header="Add to Group"
+                        IsEnabled="{Binding EnableAddToGroup}" />
+                    <MenuItem
                         x:Name="mnuMoveUp"
                         Click="mnuMoveUp_Click"
                         Header="Move up"
