--- a/UI/Windows/Group/GroupModalWindow.xaml
+++ b/UI/Windows/Group/GroupModalWindow.xaml
@@ -23,6 +23,7 @@
             VerticalAlignment="Center"
             Content="Groups" />
         <ListBox
+            x:Name="ListBoxGroup"
             Grid.Row="1"
             ItemsSource="{Binding Groups}"
             SelectedItem="{Binding SelectedOption}">
@@ -40,7 +41,8 @@
             x:Name="btnSave"
             Grid.Row="2"
             Margin="0,5,0,0"
-            Content="Save" Click="BtnSave_Click">
+            Click="BtnSave_Click"
+            Content="Save">
             <Button.Resources>
                 <Style TargetType="Border">
                     <Setter Property="CornerRadius" Value="3" />
