--- a/UI/Windows/Group/GroupModalWindow.xaml
+++ b/UI/Windows/Group/GroupModalWindow.xaml
@@ -1,9 +1,9 @@
 ﻿<Window
-    x:Class="UI.GroupModalWindow"
+    x:Class="UI.Windows.Group.GroupModalWindow"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:local="clr-namespace:UI"
+    xmlns:local="clr-namespace:UI.Windows.Group"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     Title="Add To Group"
     Width="300"
